# colony

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  compile_commands.json  config.json  garage.dae  globals.cpp  globals.h  main.cpp  tank.dae
assets/: garage.blend  hq.blend  hq.dae  plant.blend  plant.dae  shroud.blend  shroud.dae  shroud_source.blend  turbine.blend  turbine.dae
engine/: Animation.h  Application.cpp  Application.h  Beam.cpp  Beam.h  Camera.cpp  Camera.h  Circle.cpp  CircleMesh.cpp  HeightsSegment.cpp  Light.cpp  Light.h  LinesObject.cpp  LinesObject.h  LinesShader.cpp  LinesShader.h  MainTerrainMesh.cpp  MainTerrainMesh.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  ModelMesh.cpp  ModelMesh.h  ObstaclesSegment.cpp  ObstaclesSegment.h  Path.cpp  Path.h  PhongShader.cpp  PhongShader.h  PlainMesh.cpp  PlainMesh.h  RectangleShape.cpp  RectangleShape.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  (+20 more)
engine/events/: ColonyErrorEvent.h  ColonyEventFabric.h  ColonyEvents.h  ColonyKeyPressEvent.h  ColonyKeyReleaseEvent.cpp  ColonyKeyReleaseEvent.h  ColonyKeyRepeatEvent.h  ColonyMouseMoveEvent.h  ColonyMousePressEvent.h  ColonyMouseReleaseEvent.cpp  ColonyMouseReleaseEvent.h  ColonyMouseScrollEvent.cpp  ColonyMouseScrollEvent.h  Event.h
fig/: Application.h
figImpl/: Application.cpp  Application.h  ColonyApplication.cpp  ColonyApplication.h  ColonyEventManager.cpp  ColonyEventManager.h  ColonyGameLayer.cpp  ColonyGameLayer.h  ColonyGuiLayer.cpp  ColonyGuiLayer.h  ColonyWindow.cpp  ColonyWindow.h  GameLayer.cpp  GameLayer.h  GuiLayer.cpp  GuiLayer.h  SettingsGui.cpp  SettingsGui.h  Window.cpp  Window.h  globals.cpp  globals.h
figImpl/events/: ColonyEventFabric.cpp  ColonyEventFabric.h  ColonyKeyPressEvent.cpp  ColonyKeyPressEvent.h  ColonyKeyReleaseEvent.cpp  ColonyKeyReleaseEvent.h  ColonyKeyRepeatEvent.cpp  ColonyKeyRepeatEvent.h  ColonyMouseMoveEvent.cpp  ColonyMouseMoveEvent.h  ColonyMousePressEvent.cpp  ColonyMousePressEvent.h  ColonyMouseReleaseEvent.cpp  ColonyMouseReleaseEvent.h  ColonyMouseScrollEvent.cpp  ColonyMouseScrollEvent.h
helpers/: aliases.h  crtp_helper.h  templates.h
logic/: AbstractBuilder.h  AbstractPlant.cpp  AbstractPlant.h  AbstractPlantBuilder.cpp  AbstractPlantBuilder.h  AbstractStructureBuilder.h  AbstractUnitBuilder.h  AttackUnit.cpp  AttackUnit.h  Attacking.cpp  Attacking.h  Barrier.cpp  Barrier.h  BarrierBuilder.cpp  BarrierBuilder.h  Buildable.cpp  Buildable.h  BuildableAttackUnit.cpp  BuildableAttackUnit.h  BuildableNonAttackUnit.cpp  BuildableNonAttackUnit.h  BuildableStructure.cpp  BuildableStructure.h  BuildableUnit.cpp  BuildableUnit.h  Control.cpp  Control.h  EnergyStructure.cpp  EnergyStructure.h  EventManager.cpp  EventManager.h  Game.cpp  Game.h  GroundStructure.cpp  GroundStructure.h  Hq.cpp  Hq.h  HqBuilder.cpp  HqBuilder.h  Moving.cpp  (+39 more)
logic/builders/: AbstractBuilder.h  AbstractPlantBuilder.cpp  AbstractPlantBuilder.h  AbstractStructureBuilder.h  AbstractUnitBuilder.h  BarrierBuilder.cpp  BarrierBuilder.h  HqBuilder.cpp  HqBuilder.h  PlantBuilder.cpp  PlantBuilder.h  TankBuilder.cpp  TankBuilder.h  TankFactoryBuilder.cpp  TankFactoryBuilder.h  TreeBuilder.cpp  TreeBuilder.h  TurbineBuilder.cpp  TurbineBuilder.h
logic/concepts/: Attacking.cpp  Attacking.h  Buildable.cpp  Buildable.h  Moving.cpp  Moving.h  Selectable.cpp  Selectable.h
logic/structures/: AbstractPlant.cpp  AbstractPlant.h  Barrier.cpp  Barrier.h  EnergyStructure.cpp  EnergyStructure.h  GroundStructure.cpp  GroundStructure.h  Hq.cpp  Hq.h  Plant.cpp  Plant.h  Shroud.cpp  Shroud.h  Structure.cpp  Structure.h  TankFactory.cpp  TankFactory.h  Tree.cpp  Tree.h  Turbine.cpp  Turbine.h
logic/units/: AttackUnit.cpp  AttackUnit.h  NonAttackUnit.cpp  NonAttackUnit.h  Tank.cpp  Tank.h  Unit.cpp  Unit.h  VehicleGroup.cpp  VehicleGroup.h
math/: AStar.cpp  AStar.h  Noise.cpp  Noise.h
misc/: Logger.cpp  Logger.h
shaders/: fragment_color.fs  fragment_color_nonflat.fs  fragment_lines.fs  fragment_objects.fs  vertex_color.vs  vertex_color_nonflat.vs  vertex_objects.vs
view/: AbstractPlantView.cpp  AbstractPlantView.h  AttackUnitView.cpp  AttackUnitView.h  BarrierView.cpp  BarrierView.h  HqView.cpp  HqView.h  PlantView.cpp  PlantView.h  SelectableView.cpp  SelectableView.h  ShellView.cpp  ShellView.h  ShroudView.cpp  ShroudView.h  StructureView.cpp  StructureView.h  TankFactoryView.cpp  TankFactoryView.h  TankView.cpp  TankView.h  TreeView.cpp  TreeView.h  TurbineView.cpp  TurbineView.h  UnitView.cpp  UnitView.h  View.cpp  View.h
